# cortex

./: .dockerignore  .env.example  .gitignore  API-CONTRACT.md  CLAUDE.md  Dockerfile  MVPRequiremetns.md  README.md  SETUP.md  WORKTREE_PRS.md  config.docker.yaml  config.example.yaml  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  start-dev.ps1  start-dev.sh
.claude/: settings.json  settings.local.json
.claude/commands/: review-pr.md
.claude/hooks/: check-tasks.sh
.claude/rules/: branch-workflow.md  pr-review.md
api/: __init__.py  api.py  audio.py  benchmark.py  cli.py  config.py  db.py  diarize.py  example_transcript.py  extractor.py  jobs.py  llm.py  markdown.py  pipeline.py  prompts.py  quality.py  responses.py  server.py  transcribe.py
api/routes/: jobs.py  notes.py  templates.py
frontend/: .dockerignore  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: helpers.ts  home.spec.ts  notes.spec.ts  templates.spec.ts  upload.spec.ts
frontend/src/: App.tsx  api.ts  constants.ts  types.ts  utils.test.ts  utils.ts
frontend/src/components/: Layout.tsx  NotesList.tsx  NotesView.tsx  ProgressView.tsx  SpeakerAvatar.tsx  (+5 more)
meeting-notes/: meeting-2026-03-23-154335.md  meeting-2026-03-25-223559.json  meeting-2026-03-25-223559.md  meeting-2026-03-25-230128.json  meeting-2026-03-25-230128.md
migration/: SCHEMA.md  migrate.py
tests/: conftest.py  test_benchmark.py  test_db.py  test_extractor.py  test_llm.py  test_quality.py  test_responses.py  test_routes_notes.py  test_routes_templates.py
(+13 files in other folders)
